--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
 plugins {
     alias(libs.plugins.android.application)
+
+    alias(libs.plugins.hilt.android)
+    alias(libs.plugins.firebase.plugin)
+
 }
 
 android {
@@ -16,6 +20,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFeatures {
+        viewBinding true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -23,9 +31,12 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
+//    packagingOptions {
+//        exclude 'META-INF/gradle/incremental.annotation.processors'
+//    }
 }
 
 dependencies {
@@ -42,9 +53,25 @@ dependencies {
     implementation(libs.livedata)
     implementation(libs.fragment)
 
-    // java based
-    // live data
-    // viewmodel
-    // navigation
+
+    implementation(libs.hilt.android)
+    annotationProcessor(libs.hilt.proccesor)
+//    implementation(libs.hilt.viewmodel)
+//    annotationProcessor(libs.hilt.compiler)
+
+    // Room dependencies
+    implementation(libs.room.runtime)
+    annotationProcessor(libs.room.compiler)
+    implementation(libs.room.rxjava) // Room with RxJava
+    implementation(libs.room.ktx) // Optional: Room KTX for coroutines support
+
+    // RxJava dependencies
+    implementation(libs.rxjava)
+    implementation(libs.rxandroid)
+
+    implementation(platform(libs.firebase.bom))
+    implementation(libs.firebase.analytics)
+    implementation(libs.firebase.auth)
 
 }
+
