--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,21 +5,48 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
-navigation="2.8.9"
-lifecycle="2.8.7"
-fragment="1.8.6"
+navigation = "2.8.9"
+lifecycle = "2.8.7"
+fragment = "1.8.6"
+hilt = "2.51"
+hilt-compiler = "1.0.0"
+room = "2.6.1"
+rxjava = "3.1.8"
+rxandroid = "3.0.2"
+room-rxjava = "2.6.1"
+firebase-bom = "33.10.0"
+firebase-analytics = "21.5.0"
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-fragment={module="androidx.fragment:fragment",version.ref="fragment"}
-navigation-fragment={module="androidx.navigation:navigation-fragment",version.ref="navigation"}
-navigation-ui={module="androidx.navigation:navigation-ui",version.ref="navigation"}
+fragment = { module = "androidx.fragment:fragment", version.ref = "fragment" }
+navigation-fragment = { module = "androidx.navigation:navigation-fragment", version.ref = "navigation" }
+navigation-ui = { module = "androidx.navigation:navigation-ui", version.ref = "navigation" }
 
-viewmodel={module="androidx.lifecycle:lifecycle-viewmodel",version.ref="lifecycle"}
-livedata={module="androidx.lifecycle:lifecycle-livedata",version.ref="lifecycle"}
+viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel", version.ref = "lifecycle" }
+livedata = { module = "androidx.lifecycle:lifecycle-livedata", version.ref = "lifecycle" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-proccesor = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
+hilt-viewmodel = { module = "androidx.hilt:hilt-lifecycle-viewmodel", version = "1.0.0-alpha03" }
+#hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hilt-compiler" }
+
+
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+room-rxjava = { module = "androidx.room:room-rxjava3", version.ref = "room-rxjava" }
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+rxjava = { module = "io.reactivex.rxjava3:rxjava", version.ref = "rxjava" }
+rxandroid = { module = "io.reactivex.rxjava3:rxandroid", version.ref = "rxandroid" }
+
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase-bom" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
+firebase-auth = { module = "com.google.firebase:firebase-auth" }
+
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
-
+hilt-android = { id = "com.google.dagger.hilt.android", version = "2.51" }
+firebase-plugin = { id = "com.google.gms.google-services", version = "4.4.2" }
